# qml_module_minimal_example

./: CMakeLists.txt  README.md
qml/: main.qml
rectangles/: CMakeLists.txt
rectangles/qml/: BlueRectangle.qml  YellowRectangle.qml
rectangles/src/: EmptyItem.cpp  EmptyItem.h
src/: main.cpp
